# ragul-django-cookie-cutter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mise.toml  pyproject.toml
.cursor/rules/: drf_view_rules.mdc
deployment/docker/: Dockerfile  docker-compose.yaml
deployment/scripts/: deploy-playbook.yaml  entrypoint.sh  startup.sh
deployment/server/ansible/: playbook-actions.yaml
deployment/server/nginx/: site.conf
docs/: environment_setup_helper.md  learning_references.md  uv_helper.md
requirements/: dev-requirements.txt  docker-requirements.txt  requirements.txt
scripts/: deploy-playbook.yaml  deploy.sh
src/: django_shell.ipynb
src/config/: settings.py
